--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "mocha": "^5.2.0",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "should": "^13.2.3"
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1"
