--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "babel src -d lib",
     "watch-build": "npm run build -- -w",
     "test": "mocha js:babel-core/register --colors tests/*",
-    "prettier": "/node_modules/prettier/bin-prettier.js --write src/**/*.js"
+    "prettier": "./node_modules/prettier/bin-prettier.js --write src/**/*.js"
   },
   "keywords": [
     "NHL",
