--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nhl.js",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Interact with the NHL api",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "babel src -d lib",
     "watch-build": "npm run build -- -w",
